# Play-Dependencies

./: .gitignore  .gitmodules
BoostMac/: boost.sh  readme
appcompat/: local.properties
appcompat/res/values/: dimens.xml
appcompat/src/ikimuhendis/ldrawer/: ActionBarDrawerToggle.java
build_android/: AndroidManifest.xml  build.cmd  build.sh  build.xml  clean.cmd  local.properties
build_android/jni/: Android.mk  Application.mk  ExternalDependencies.mk.template
build_cmake/SDWebImage/: CMakeLists.txt
build_cmake/bzip2-1.0.6/: CMakeLists.txt
build_cmake/iCade-iOS/: CMakeLists.txt
build_cmake/lzmasdk-18.05/: CMakeLists.txt
build_cmake/nlohmann_json/: CMakeLists.txt
build_cmake/sqlite-3.15.1/: CMakeLists.txt
build_cmake/sqlite-3.20.1/: CMakeLists.txt
build_cmake/unrarsrc-5.2.5/: CMakeLists.txt
build_cmake/zlib/: CMakeLists.txt
build_cmake/zlib-1.2.8/: CMakeLists.txt
build_cmake/zstd_zlibwrapper/: CMakeLists.txt
build_win32/: Dependencies.sln  bzip2-1.0.6.vcxproj  bzip2-1.0.6.vcxproj.filters  sqlite-3.15.1.vcxproj  sqlite-3.15.1.vcxproj.filters  sqlite-3.20.1.vcxproj  sqlite-3.20.1.vcxproj.filters  unrarsrc-5.2.5.vcxproj  unrarsrc-5.2.5.vcxproj.filters  zlib-1.2.8.vcxproj  zlib-1.2.8.vcxproj.filters
bzip2-1.0.6/: CMakeLists.txt
cmake-ios/: ios.cmake
cmake-modules/: FindDirectX9.cmake  FindGLEW.cmake  FindICUUC.cmake  FindLIBEVDEV.cmake  FindMYSQL.cmake  FindOpenAL.cmake  FindXAudio.cmake  Header.cmake  PrecompiledHeader.cmake
d3dcompiler_winxp/: CMakeLists.txt
glew-2.0.0/: CMakeLists.txt
nlohmann_json/: CMakeLists.txt
tdemu-1.10/: CMakelists.txt  TDEmu.chm  TDEmu.lib  TDEmu64.lib  tdemu.h
unrarsrc-5.2.5/unrar/: os.hpp
zlib-1.2.8/: CMakeLists.txt  gzguts.h
